--- a/index.html
+++ b/index.html
@@ -17,6 +17,36 @@
       <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
       <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
       <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
+      <span>🚧 WEBSITE IN BETA - GLITCHES MAY HAPPEN 🚧</span>
     </div>
   </div>
 
@@ -58,7 +88,7 @@
       <div class="gallery-categories">
         <div class="category-card" id="civil">
           <div class="category-image">
-            <img src="images/IMG_3009.jpg" alt="Civil Aviation" />
+            <img src="images/IMG_3128.jpg" alt="Civil Aviation" />
           </div>
           <div class="category-content">
             <h3>Civil</h3>
@@ -98,6 +128,16 @@
             </div>
           </div>
         </div>
+        <div class="gallery-item">
+          <img src="images/IMG_3061.jpg" alt="UAE A139 arriving into Newcastle Airport from Inverness" />
+          <div class="gallery-overlay">
+            <div class="gallery-info">
+              <h3>UAE A139</h3>
+              <p>UAE A139 Arriving into Newcastle Airport from Inverness</p>
+              <span class="aircraft-type">AgustaWestland AW139</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -110,7 +150,13 @@
       <button id="militaryUploadBtn" style="display:none;" onclick="showUploadForm('military')">Upload Image (Admin Only)</button>
       <div id="militaryUploadForm" class="upload-form" style="display:none;"></div>
       <div class="gallery-grid" id="militaryGalleryGrid">
-        <!-- All plane gallery items removed -->
+        <div class="coming-soon-message">
+          <div class="coming-soon-content">
+            <i class="fas fa-plane"></i>
+            <h3>Photos Coming Soon</h3>
+            <p>Military aviation photos will be added to this gallery soon. Check back later for updates!</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
